--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ЖК «Лунное море» BiscuitDream</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>ЖК «Лунное море» BiscuitDream</title>
 
-    <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-
+  <header>
+    <p>Шапка сайта</p>
+  </header>
+  <main>
+    <p>Основная часть сайта</p>
+  </main>
+  <footer>
+    <p>Подвал сайта</p>
+  </footer>
 </body>
 </html>
