--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 </head>
 <body>
   <header>
-    <p>Шапка сайта</p>
+    <a class="logo" href="index.html">
+      <img src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="35px">
+      <span class="ml-15">Лунное море</span>
+    </a>
+    <nav>
+      <ul>
+        <li><a href="#features">Преимущества</a></li>
+        <li><a href="#about">О ЖК</a></li>
+        <li><a href="#relaxation">Места для отдыха</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
     <p>Основная часть сайта</p>
