step 3.2. header change css for atomic

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-  <header>
-    <a class="logo" href="index.html">
+  <header class="pl-10 pr-10 d-f jc-sb ali-c">
+    <a class="d-f ali-c" href="index.html">
       <img src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="35px">
       <span class="ml-15">Лунное море</span>
     </a>
     <nav>
-      <ul>
-        <li><a href="#features">Преимущества</a></li>
-        <li><a href="#about">О ЖК</a></li>
+      <ul class="d-f list-reset">
+        <li class="mr-10"><a href="#features">Преимущества</a></li>
+        <li class="mr-10"><a href="#about">О ЖК</a></li>
         <li><a href="#relaxation">Места для отдыха</a></li>
       </ul>
     </nav>
