--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-  <header class="pl-10 pr-10 d-f jc-sb ali-c">
-    <a class="d-f ali-c" href="index.html">
+  <header class="pl-10 pr-10 d-flex jc-sb ali-c">
+    <a class="d-flex ali-c" href="index.html">
       <img src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="35px">
       <span class="ml-15">Лунное море</span>
     </a>
     <nav>
-      <ul class="d-f list-reset">
+      <ul class="d-flex list-reset">
         <li class="mr-10"><a href="#features">Преимущества</a></li>
         <li class="mr-10"><a href="#about">О ЖК</a></li>
         <li><a href="#relaxation">Места для отдыха</a></li>
