--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
     </nav>
   </header>
   <main>
-    <p>Основная часть сайта</p>
+    <section class="banner d-flex flex-column ali-c col-white">
+      <img src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="100px">
+      <h1>ЖК «Лунное море»</h1>
+      <p>Место, откуда не хочется улетать</p>
+      <a class="button" href="#request">Забронировать</a>
+    </section>
   </main>
   <footer>
     <p>Подвал сайта</p>
