step 5.1 add anchor links

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <p>Место, откуда не хочется улетать</p>
       <a class="button" href="#request">Забронировать</a>
     </section>
-    <section class="advantages">
+    <section id="advantages">
       <div class="wrapper-section">
         <ul class="list-reset d-flex jc-sb">
           <li class="w-30pr">
@@ -47,7 +47,7 @@
         </ul>
       </div>
     </section>
-    <section class="about bg-grey">
+    <section id="about" class=" bg-grey">
       <div class="wrapper-section d-flex jc-sb">
         <div class="wrapper-text">
           <h2>О ЖК «Лунное море»</h2>
@@ -57,7 +57,7 @@
         <img src="./images/moon-1.jpg" alt="Луна" width="300px">
       </div>
     </section>
-    <section class="relaxation">
+    <section id="relaxation">
       <div class="wrapper-section d-flex jc-sb">
         <img src="./images/moon-2.jpg" alt="Вид на луну" width="300px">
         <div class="wrapper-text">
