step 6.0. add form

--- a/index.html
+++ b/index.html
@@ -72,6 +72,41 @@
         </div>
       </div>
     </section>
+
+    <section class="form bg-grey">
+      <div class="wrapper-form">
+        <h2 class="talign-center">Оставьте заявку сегодня!</h2>
+        <form action="">
+          <fieldset>
+            <legend>Параметры квартиры</legend>
+            <div>
+              <label for="rooms">Количество комнат:</label>
+              <input id="rooms" type="text">
+            </div>
+            <div>
+              <label for="decoration">Отделка:</label>
+              <input id="decoration" type="text">
+            </div>
+          </fieldset>
+          <fieldset>
+            <legend>Контактная информация</legend>
+            <div>
+              <label for="name">Имя:</label>
+              <input id="name" type="text">
+            </div>
+            <div>
+              <label for="phone">Телефон:</label>
+              <input id="phone" type="text">
+            </div>
+            <div>
+              <label for="email">E-mail:</label>
+              <input id="email" type="text">
+            </div>
+          </fieldset>
+          <button class="button button-form" type="submit">Отправить</button>
+        </form>
+      </div>
+    </section>
   </main>
 
   <footer>
