step 6.1. add anchor link for form

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <section class="form bg-grey">
       <div class="wrapper-form">
         <h2 class="talign-center">Оставьте заявку сегодня!</h2>
-        <form action="">
+        <form id="request" action="">
           <fieldset>
             <legend>Параметры квартиры</legend>
             <div>
