--- a/index.html
+++ b/index.html
@@ -109,8 +109,30 @@
     </section>
   </main>
 
-  <footer>
-    <p>Подвал сайта</p>
+  <footer class="bg-dark-blue col-white">
+    <div class="wrapper-section d-flex jc-sb">
+      <div class="d-flex flex-column">
+        <a href="index.html">
+          <img src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="35px">
+          <span>Лунное море</span>
+        </a>
+        <span>©2032 год</span>
+      </div>
+      <div>
+        <p>Проектная документация</p>
+        <ul>
+          <li>Скачать</li>
+          <li>Посмотреть на сайте</li>
+        </ul>
+      </div>
+      <div>
+        <p>О застройщике</p>
+        <ul>
+          <li>Отзывы</li>
+          <li>Сайт компании</li>
+        </ul>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
