--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 
 <body>
-  <header class="pl-10 pr-10 d-flex jc-sb ali-c">
+  <header class="d-flex jc-sb ali-c">
     <a class="d-flex ali-c" href="index.html">
       <img src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="35px">
       <span class="ml-15">Лунное море</span>
     </a>
     <nav>
       <ul class="d-flex list-reset">
-        <li class="mr-10"><a href="#advantages">Преимущества</a></li>
-        <li class="mr-10"><a href="#about">О ЖК</a></li>
+        <li class="mr-13"><a href="#advantages">Преимущества</a></li>
+        <li class="mr-13"><a href="#about">О ЖК</a></li>
         <li><a href="#relaxation">Места для отдыха</a></li>
       </ul>
     </nav>
