--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
   <main>
     <section class="banner d-flex flex-column ali-c col-white">
-      <img src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="100px">
-      <h1>ЖК «Лунное море»</h1>
-      <p>Место, откуда не хочется улетать</p>
+      <img src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="170px">
+      <h1 class="banner-headline">ЖК «Лунное море»</h1>
+      <p class="banner-tagline">Место, откуда не хочется улетать</p>
       <a class="button" href="#request">Забронировать</a>
     </section>
 
