--- a/index.html
+++ b/index.html
@@ -36,39 +36,39 @@
       <div class="wrapper-section">
         <ul class="list-reset d-flex jc-sb">
           <li class="w-30pr">
-            <h2>Уникальный вид</h2>
-            <p>Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
+            <h2 class="section-headline">Уникальный вид</h2>
+            <p class="section-description">Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
           </li>
           <li class="w-30pr">
-            <h2>Инфраструктура</h2>
-            <p>Прекрасные дороги рядом с домом. Много мест для прогулки. Всего в 200 км. от посёлка находится кольцо гор Кордильеры, на которых вы сможете провести незабываемые выходные.</p>
+            <h2 class="section-headline">Инфраструктура</h2>
+            <p class="section-description">Прекрасные дороги рядом с домом. Много мест для прогулки. Всего в 200 км. от посёлка находится кольцо гор Кордильеры, на которых вы сможете провести незабываемые выходные.</p>
           </li>
           <li class="w-30pr">
-            <h2>Близость к Москве</h2>
-            <p>При небольшой цене мы располагаемся близко к МКАД. Всего 384 000 километров и вы в самом сердце России.</p>
+            <h2 class="section-headline">Близость к Москве</h2>
+            <p class="section-description">При небольшой цене мы располагаемся близко к МКАД. Всего 384 000 километров и вы в самом сердце России.</p>
           </li>
         </ul>
       </div>
     </section>
 
     <section id="about" class=" bg-grey">
-      <div class="wrapper-section d-flex jc-sb">
+      <div class="wrapper-section d-flex jc-sa">
         <div class="wrapper-text">
-          <h2>О ЖК «Лунное море»</h2>
-          <p>Все чаще жители Москвы предпочитают загородный дом городской квартире, к тому же связь с мегаполисом не теряется – современные скоростные трассы позволяют без труда добираться до столицы и обратно.</p>
-          <p>Мы построили наши дома на самом близком к Солнцу спутнике, всего в 380 тысяч километров от Земли.</p>
+          <h2 class="section-headline">О ЖК «Лунное море»</h2>
+          <p class="section-description mb-15">Все чаще жители Москвы предпочитают загородный дом городской квартире, к тому же связь с мегаполисом не теряется – современные скоростные трассы позволяют без труда добираться до столицы и обратно.</p>
+          <p class="section-description">Мы построили наши дома на самом близком к Солнцу спутнике, всего в 380 тысяч километров от Земли.</p>
         </div>
         <img src="./images/moon-1.jpg" alt="Луна" width="300px">
       </div>
     </section>
 
     <section id="relaxation">
-      <div class="wrapper-section d-flex jc-sb">
+      <div class="wrapper-section d-flex jc-sa">
         <img src="./images/moon-2.jpg" alt="Вид на луну" width="300px">
         <div class="wrapper-text">
-          <h2>Места для отдыха</h2>
-          <p>Луна обладает всеми условиями для комфортного отдыха от большого города. В вашем распоряжении 22 моря и 18 гор. Самое ближайшее кольцо гор всего в 200 километров от вашей квартиры.</p>
-          <p>Дома располагаются в новом районе «Лунные моря». При необходимости есть автобусы до района «Лунный материк».</p>
+          <h2 class="section-headline">Места для отдыха</h2>
+          <p class="section-description mb-15">Луна обладает всеми условиями для комфортного отдыха от большого города. В вашем распоряжении 22 моря и 18 гор. Самое ближайшее кольцо гор всего в 200 километров от вашей квартиры.</p>
+          <p class="section-description">Дома располагаются в новом районе «Лунные моря». При необходимости есть автобусы до района «Лунный материк».</p>
         </div>
       </div>
     </section>
