--- a/index.html
+++ b/index.html
@@ -120,22 +120,22 @@
   <footer class="bg-dark-blue col-white">
     <div class="wrapper-section d-flex jc-sb">
       <div class="d-flex flex-column">
-        <a href="index.html">
-          <img src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="35px">
-          <span>Лунное море</span>
+        <a class="d-flex ali-c mb-18" href="index.html">
+          <img class="mr-15" src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="35px">
+          <span class="fw-b">Лунное море</span>
         </a>
-        <span>©2032 год</span>
+        <span class="fs-13">© 2032 год</span>
       </div>
-      <div>
-        <p>Проектная документация</p>
-        <ul>
+      <div class="fw-b">
+        <p class="m-0  mb-20 fs-18">Проектная документация</p>
+        <ul class="fs-13">
           <li>Скачать</li>
           <li>Посмотреть на сайте</li>
         </ul>
       </div>
-      <div>
-        <p>О застройщике</p>
-        <ul>
+      <div class="fw-b">
+        <p class="m-0 mb-20 fs-18">О застройщике</p>
+        <ul class="fs-13">
           <li>Отзывы</li>
           <li>Сайт компании</li>
         </ul>
