fix validation errors

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="d-flex jc-sb ali-c">
     <a class="d-flex ali-c" href="index.html">
-      <img src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="35px">
+      <img src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="35">
       <span class="ml-15">Лунное море</span>
     </a>
     <nav>
@@ -26,7 +26,7 @@
 
   <main>
     <section class="banner d-flex flex-column ali-c col-white">
-      <img src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="170px">
+      <img src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="170">
       <h1 class="banner-headline">ЖК «Лунное море»</h1>
       <p class="banner-tagline">Место, откуда не хочется улетать</p>
       <a class="button" href="#request">Забронировать</a>
@@ -58,13 +58,13 @@
           <p class="section-description mb-15">Все чаще жители Москвы предпочитают загородный дом городской квартире, к тому же связь с мегаполисом не теряется – современные скоростные трассы позволяют без труда добираться до столицы и обратно.</p>
           <p class="section-description">Мы построили наши дома на самом близком к Солнцу спутнике, всего в 380 тысяч километров от Земли.</p>
         </div>
-        <img src="./images/moon-1.jpg" alt="Луна" width="300px">
+        <img src="./images/moon-1.jpg" alt="Луна" width="300">
       </div>
     </section>
 
     <section id="relaxation">
       <div class="wrapper-section d-flex jc-sa">
-        <img src="./images/moon-2.jpg" alt="Вид на луну" width="300px">
+        <img src="./images/moon-2.jpg" alt="Вид на луну" width="300">
         <div class="wrapper-text">
           <h2 class="section-headline">Места для отдыха</h2>
           <p class="section-description mb-15">Луна обладает всеми условиями для комфортного отдыха от большого города. В вашем распоряжении 22 моря и 18 гор. Самое ближайшее кольцо гор всего в 200 километров от вашей квартиры.</p>
@@ -76,12 +76,12 @@
     <section class="form bg-grey">
       <div class="wrapper-section">
         <h2 class="section-headline talign-center mb-40">Оставьте заявку сегодня!</h2>
-        <form id="request" action="">
+        <form id="request" action="#">
           <fieldset class="mb-20">
             <legend>Параметры квартиры</legend>
             <div class="d-flex jc-sb ali-c mb-10">
               <label for="rooms">Количество комнат:</label>
-              <select class="mr-50" id="rooms" type="text">
+              <select class="mr-50" id="rooms">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -89,7 +89,7 @@
             </div>
             <div class="d-flex jc-sb ali-c mb-30">
               <label for="decoration">Отделка:</label>
-              <select class="mr-50" id="decoration" type="text">
+              <select class="mr-50" id="decoration">
                 <option value="">Без отделки</option>
                 <option value="minimal">Минимальная</option>
                 <option value="maximum">Максимальная</option>
@@ -121,7 +121,7 @@
     <div class="wrapper-section d-flex jc-sb">
       <div class="d-flex flex-column">
         <a class="d-flex ali-c mb-18" href="index.html">
-          <img class="mr-15" src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="35px">
+          <img class="mr-15" src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="35">
           <span class="fw-b">Лунное море</span>
         </a>
         <span class="fs-13">© 2032 год</span>
