fix remarks 1.1. remove list in advantages

--- a/index.html
+++ b/index.html
@@ -35,21 +35,19 @@
     </section>
 
     <section id="advantages">
-      <div class="wrapper-section">
-        <ul class="list-reset d-flex jc-sb">
-          <li class="w-30pr">
-            <h2 class="section-headline">Уникальный вид</h2>
-            <p class="section-description">Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
-          </li>
-          <li class="w-30pr">
-            <h2 class="section-headline">Инфраструктура</h2>
-            <p class="section-description">Прекрасные дороги рядом с домом. Много мест для прогулки. Всего в 200 км. от посёлка находится кольцо гор Кордильеры, на которых вы сможете провести незабываемые выходные.</p>
-          </li>
-          <li class="w-30pr">
-            <h2 class="section-headline">Близость к Москве</h2>
-            <p class="section-description">При небольшой цене мы располагаемся близко к МКАД. Всего 384 000 километров и вы в самом сердце России.</p>
-          </li>
-        </ul>
+      <div class="wrapper-section d-flex d-flex jc-sb">
+        <div class="w-30pr">
+          <h2 class="section-headline">Уникальный вид</h2>
+          <p class="section-description">Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
+        </div>
+        <div class="w-30pr">
+          <h2 class="section-headline">Инфраструктура</h2>
+          <p class="section-description">Прекрасные дороги рядом с домом. Много мест для прогулки. Всего в 200 км. от посёлка находится кольцо гор Кордильеры, на которых вы сможете провести незабываемые выходные.</p>
+        </div>
+        <div class="w-30pr">
+          <h2 class="section-headline">Близость к Москве</h2>
+          <p class="section-description">При небольшой цене мы располагаемся близко к МКАД. Всего 384 000 километров и вы в самом сердце России.</p>
+        </div>
       </div>
     </section>
 
