fix remarks 2.0. nav and header classes

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-  <header class="main-header d-flex jc-sb ali-c">
+  <header class="main-header fixed-on-top d-flex jc-sb ali-c">
     <a class="d-flex ali-c" href="index.html">
       <img src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="35">
       <span class="ml-15">Лунное море</span>
     </a>
-    <nav>
+    <nav class="fs-13">
       <ul class="d-flex list-reset">
         <li class="mr-13"><a href="#advantages">Преимущества</a></li>
         <li class="mr-13"><a href="#about">О ЖК</a></li>
