remarks 2.1. change class name

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </header>
 
   <main>
-    <section class="intro col-white">
+    <section class="intro text-white">
       <div class="wrapper-section d-flex flex-column ali-c">
         <img src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="170">
         <h1 class="intro-headline">ЖК «Лунное море»</h1>
@@ -117,7 +117,7 @@
     </section>
   </main>
 
-  <footer class="bg-dark-blue col-white">
+  <footer class="bg-dark-blue text-white">
     <div class="wrapper-section d-flex jc-sb">
       <div class="d-flex flex-column">
         <a class="d-flex ali-c mb-18" href="index.html">
