--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="intro text-white">
       <div class="wrapper-section d-flex flex-column ali-c">
         <img src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="170">
-        <h1 class="intro-headline">ЖК «Лунное море»</h1>
+        <h1>ЖК «Лунное море»</h1>
         <p class="intro-tagline">Место, откуда не хочется улетать</p>
         <a class="button" href="#request">Забронировать</a>
       </div>
@@ -37,15 +37,15 @@
     <section id="advantages">
       <div class="wrapper-section d-flex d-flex jc-sb">
         <div class="w-30pr">
-          <h2 class="section-headline">Уникальный вид</h2>
+          <h2>Уникальный вид</h2>
           <p class="section-description">Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
         </div>
         <div class="w-30pr">
-          <h2 class="section-headline">Инфраструктура</h2>
+          <h2>Инфраструктура</h2>
           <p class="section-description">Прекрасные дороги рядом с домом. Много мест для прогулки. Всего в 200 км. от посёлка находится кольцо гор Кордильеры, на которых вы сможете провести незабываемые выходные.</p>
         </div>
         <div class="w-30pr">
-          <h2 class="section-headline">Близость к Москве</h2>
+          <h2>Близость к Москве</h2>
           <p class="section-description">При небольшой цене мы располагаемся близко к МКАД. Всего 384 000 километров и вы в самом сердце России.</p>
         </div>
       </div>
@@ -54,7 +54,7 @@
     <section id="about" class=" bg-grey">
       <div class="wrapper-section d-flex jc-sa ali-c">
         <div class="wrapper-text">
-          <h2 class="section-headline">О ЖК «Лунное море»</h2>
+          <h2>О ЖК «Лунное море»</h2>
           <p class="section-description mb-15">Все чаще жители Москвы предпочитают загородный дом городской квартире, к тому же связь с мегаполисом не теряется – современные скоростные трассы позволяют без труда добираться до столицы и обратно.</p>
           <p class="section-description">Мы построили наши дома на самом близком к Солнцу спутнике, всего в 380 тысяч километров от Земли.</p>
         </div>
@@ -66,7 +66,7 @@
       <div class="wrapper-section d-flex jc-sa ali-c">
         <img src="./images/moon-2.jpg" alt="Вид на луну" width="300">
         <div class="wrapper-text">
-          <h2 class="section-headline">Места для отдыха</h2>
+          <h2>Места для отдыха</h2>
           <p class="section-description mb-15">Луна обладает всеми условиями для комфортного отдыха от большого города. В вашем распоряжении 22 моря и 18 гор. Самое ближайшее кольцо гор всего в 200 километров от вашей квартиры.</p>
           <p class="section-description">Дома располагаются в новом районе «Лунные моря». При необходимости есть автобусы до района «Лунный материк».</p>
         </div>
@@ -75,7 +75,7 @@
 
     <section class="form bg-grey">
       <div class="wrapper-section">
-        <h2 class="section-headline talign-center mb-40">Оставьте заявку сегодня!</h2>
+        <h2 class="talign-center mb-40">Оставьте заявку сегодня!</h2>
         <form id="request" action="#">
           <fieldset class="mb-20">
             <legend>Параметры квартиры</legend>
