fix remarks 2.3. change class names for button and form

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <section class="form bg-grey">
       <div class="wrapper-section">
         <h2 class="talign-center mb-40">Оставьте заявку сегодня!</h2>
-        <form id="request" action="#">
+        <form id="request" class="form-request" action="#">
           <fieldset class="mb-20">
             <legend>Параметры квартиры</legend>
             <div class="d-flex jc-sb ali-c mb-10">
@@ -111,7 +111,7 @@
               <input id="email" type="text">
             </div>
           </fieldset>
-          <button class="button button-green" type="submit">Отправить</button>
+          <button class="button button-green w-160" type="submit">Отправить</button>
         </form>
       </div>
     </section>
