--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <main>
     <section class="intro text-white">
-      <div class="wrapper-section d-flex flex-column ali-c">
+      <div class="wrapper-section wrapper-section-fat d-flex flex-column ali-c">
         <img src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="170">
         <h1>ЖК «Лунное море»</h1>
         <p class="intro-tagline">Место, откуда не хочется улетать</p>
