fix remarks 3.0. rename class names for flex properties

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <header class="main-header fixed-on-top d-flex jc-sb ali-c">
-    <a class="d-flex ali-c" href="index.html">
+  <header class="main-header fixed-on-top d-flex justify-content-between align-items-center">
+    <a class="d-flex align-items-center" href="index.html">
       <img src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="35">
       <span class="ml-15">Лунное море</span>
     </a>
@@ -26,7 +26,7 @@
 
   <main>
     <section class="intro text-white">
-      <div class="wrapper-section wrapper-section-fat d-flex flex-column ali-c">
+      <div class="wrapper-section wrapper-section-fat d-flex flex-column align-items-center">
         <img src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="170">
         <h1>ЖК «Лунное море»</h1>
         <p class="intro-tagline">Место, откуда не хочется улетать</p>
@@ -35,7 +35,7 @@
     </section>
 
     <section id="advantages">
-      <div class="wrapper-section d-flex d-flex jc-sb">
+      <div class="wrapper-section d-flex d-flex justify-content-between">
         <div class="w-30pr">
           <h2>Уникальный вид</h2>
           <p class="section-description">Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
@@ -52,7 +52,7 @@
     </section>
 
     <section id="about" class=" bg-grey">
-      <div class="wrapper-section d-flex jc-sa ali-c">
+      <div class="wrapper-section d-flex justify-content-around align-items-center">
         <div class="wrapper-text">
           <h2>О ЖК «Лунное море»</h2>
           <p class="section-description mb-15">Все чаще жители Москвы предпочитают загородный дом городской квартире, к тому же связь с мегаполисом не теряется – современные скоростные трассы позволяют без труда добираться до столицы и обратно.</p>
@@ -63,7 +63,7 @@
     </section>
 
     <section id="relaxation">
-      <div class="wrapper-section d-flex jc-sa ali-c">
+      <div class="wrapper-section d-flex justify-content-around align-items-center">
         <img src="./images/moon-2.jpg" alt="Вид на луну" width="300">
         <div class="wrapper-text">
           <h2>Места для отдыха</h2>
@@ -79,7 +79,7 @@
         <form id="request" class="form-request" action="#">
           <fieldset class="mb-20">
             <legend>Параметры квартиры</legend>
-            <div class="d-flex jc-sb ali-c mb-10">
+            <div class="d-flex justify-content-between align-items-center mb-10">
               <label for="rooms">Количество комнат:</label>
               <select class="mr-50" id="rooms">
                 <option value="1">1</option>
@@ -87,7 +87,7 @@
                 <option value="3">3</option>
               </select>
             </div>
-            <div class="d-flex jc-sb ali-c mb-30">
+            <div class="d-flex justify-content-between align-items-center mb-30">
               <label for="decoration">Отделка:</label>
               <select class="mr-50" id="decoration">
                 <option value="">Без отделки</option>
@@ -98,15 +98,15 @@
           </fieldset>
           <fieldset class="mb-20">
             <legend>Контактная информация</legend>
-            <div class="d-flex jc-sb ali-c mb-10">
+            <div class="d-flex justify-content-between align-items-center mb-10">
               <label for="name">Имя:</label>
               <input id="name" type="text">
             </div>
-            <div class="d-flex jc-sb ali-c mb-10">
+            <div class="d-flex justify-content-between align-items-center mb-10">
               <label for="phone">Телефон:</label>
               <input id="phone" type="text">
             </div>
-            <div class="d-flex jc-sb ali-c mb-30">
+            <div class="d-flex justify-content-between align-items-center mb-30">
               <label for="email">E-mail:</label>
               <input id="email" type="text">
             </div>
@@ -118,9 +118,9 @@
   </main>
 
   <footer class="bg-dark-blue text-white">
-    <div class="wrapper-section d-flex jc-sb">
+    <div class="wrapper-section d-flex justify-content-between">
       <div class="d-flex flex-column">
-        <a class="d-flex ali-c mb-18" href="index.html">
+        <a class="d-flex align-items-center mb-18" href="index.html">
           <img class="mr-15" src="./images/logo.svg" alt="Логотип ЖК «Лунное море»" width="35">
           <span class="fw-b">Лунное море</span>
         </a>
